--- a/css/style.css
+++ b/css/style.css
@@ -150,7 +150,7 @@ a:hover{
 
 
 .contactme {
-    margin: 0 auto;
+    margin: 30px auto 0 auto;
    -webkit-border-radius: 20px;
    -moz-border-radius: 20px;
    border-radius: 20px;
